# mbf_bam

./: .gitignore  .hgignore  Cargo.toml  README.md  pyproject.toml  setup.cfg  setup.py  test.py
benchmarks/: benchmark_read_counting.py  old_read_counters.py  perf.sh
docs/: Makefile  conf.py  index.rst
release/: build_wheels.sh  release.py
sample_data/: make.py
src/: bam_ext.rs  bam_manipulation.rs  count_reads.rs  duplicate_distribution.rs  lib.rs
src/count_reads/: by_barcode.rs  chunked_genome.rs  counters.rs  introns.rs  mod.rs  quantify.rs
src/mbf_bam/: __init__.py
tests/: conftest.py  test_other.py  test_utils.py
